# palette

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  README.md  RENAME_MAPPING.md  REQUIREMENTS.md  SECURITY.md  action.yml  beater-cli  docker-compose.prebuilt.yml  docker-compose.yml  fly.toml  palette-cli
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.tempera/: agent-kit.lock.json
bins/beaterctl/: Cargo.toml
bins/beaterctl/src/: fixtures.rs  main.rs
bins/beaterctl/tests/: api_cli.rs  calibration_fixture.rs  gate_cli.rs  gate_run.rs  ingest_outage_fixture.rs  quickstart.rs  remote_smoke.rs  rsi_holdout.rs  rsi_round.rs  rsi_round_live.rs  rsi_round_mock.rs  rsi_round_trace.rs  smoke.rs
bins/beaterd/: Cargo.toml
bins/beaterd/src/: main.rs  metrics.rs  metrics_http.rs  runtime.rs  trace_store.rs
bins/beaterd/tests/: gate2_outside_validator.rs  live_smoke.rs  mcp_stdio.rs  offline_compose.rs  self_host_contract.rs  sqlite_migrations.rs  thin_bins_optional.rs
bins/palettectl/: Cargo.toml
bins/palettectl/src/: main.rs
bins/palettectl/tests/: api_cli.rs  audit_fixture.rs  bus_fixture.rs  calibration_fixture.rs  gate_cli.rs  gate_run.rs  ingest_outage_fixture.rs  quickstart.rs  remote_smoke.rs  review_fixture.rs  rsi_round.rs  rsi_round_live.rs  rsi_round_mock.rs  rsi_round_trace.rs  secret_rotate.rs  smoke.rs  usage_fixture.rs
bins/paletted/: Cargo.toml
bins/paletted/src/: main.rs  metrics.rs  metrics_http.rs
bins/paletted/tests/: gate2_outside_validator.rs  live_smoke.rs  mcp_stdio.rs  offline_compose.rs  self_host_contract.rs  sqlite_migrations.rs  thin_bins_optional.rs
bins/paletted/tests/fixtures/: gate2-compose-browser-demo.webm
crates/beater-alerts/: Cargo.toml
crates/beater-alerts/src/: lib.rs
crates/beater-api/: Cargo.toml
crates/beater-api/src/: lib.rs  openapi.rs
crates/beater-api/tests/: billing_api.rs  connectors.rs  full_stack.rs  import_mapping.rs  openapi_coverage.rs  prompts_api.rs  rbac_enforcement.rs  route_inventory.golden.txt  route_inventory.rs
crates/beater-archive/: Cargo.toml
crates/beater-archive/src/: lib.rs  sweeper.rs
crates/beater-archive/tests/: orphan_sweeper.rs
crates/beater-audit/: Cargo.toml
crates/beater-audit/src/: lib.rs
crates/beater-auth/: Cargo.toml
crates/beater-auth/src/: lib.rs
crates/beater-bench/: Cargo.toml
crates/beater-bench/benches/: smoke.rs  store_memory.rs
crates/beater-bench/src/: lib.rs
crates/beater-billing/: Cargo.toml
crates/beater-billing/src/: aether.rs  lib.rs  store.rs  stripe.rs
crates/beater-billing/tests/: integration.rs
crates/beater-browser-capture/: Cargo.toml
crates/beater-browser-capture/src/: lib.rs
crates/beater-browser-cdp/: Cargo.toml
crates/beater-browser-cdp/src/: lib.rs
crates/beater-browser-harness/: Cargo.toml
crates/beater-browser-harness/src/: lib.rs
crates/beater-browser-playwright/: Cargo.toml
crates/beater-browser-playwright/runner/: package.json  runner.js
crates/beater-browser-playwright/src/: lib.rs  protocol.rs
crates/beater-browser-playwright/tests/: conformance.rs
crates/beater-bus/: Cargo.toml
crates/beater-bus/src/: lib.rs
crates/beater-calibration/: Cargo.toml
crates/beater-calibration/src/: lib.rs
crates/beater-composio/: Cargo.toml
crates/beater-composio/catalog/: toolkits.json
crates/beater-composio/src/: lib.rs  policy.rs  rsi.rs  skill.rs
crates/beater-composio/tests/: rsi_round.rs
crates/beater-core/: Cargo.toml
crates/beater-core/src/: lib.rs  merkle.rs
crates/beater-datasets/: Cargo.toml
crates/beater-datasets/src/: lib.rs  split.rs
crates/beater-delegation/: Cargo.toml
crates/beater-delegation/src/: lib.rs
crates/beater-design/: Cargo.toml
crates/beater-design/src/: lib.rs
crates/beater-eval/: Cargo.toml
crates/beater-eval/src/: lib.rs
crates/beater-eval/tests/: canonical_judge_lane.rs
crates/beater-experiments/: Cargo.toml
crates/beater-experiments/src/: lib.rs  rsi.rs
crates/beater-experiments/tests/: rsi_round_http_e2e.rs
crates/beater-gates/: Cargo.toml
crates/beater-gates/src/: lib.rs
crates/beater-human/: Cargo.toml
crates/beater-human/src/: lib.rs
crates/beater-ingest/: Cargo.toml
crates/beater-ingest/src/: lib.rs
crates/beater-judge/: Cargo.toml
crates/beater-judge/src/: lib.rs
crates/beater-langfuse/: Cargo.toml
crates/beater-langfuse/src/: lib.rs
crates/beater-langfuse/tests/: import.rs
crates/beater-langfuse/tests/fixtures/: langfuse_trace_export.json
docs/: api-stability-policy.md  apple-container.md  architecture-status.md  beater-replaykit-integration.md  build-performance.md  bus-backends.md  ci-checks.md  composio.md  data-engine-integration.md  ecosystem-integration-contract.md  eval-gate-action.md  feature-matrix.md  hosting.md  issue-backlog-audit-2026-07-01.md  issue-triage-2026-06-28.md  local-dev.md  mcp-client-setup.md  merge-queue.md  offline-self-host.md  performance-budgets.md  rsi-program.md  sdk-platform-architecture.md  security-regression-fixtures.md  security-review-2026-06-24.md
examples/: README.md
migrations/: README.md  checksums.json
scripts/: audit-api-shapes.py  bare-metal-slice-plan.py  browser-e2e.sh  build-image.sh  check-action-pins.sh  check-api-stability-policy.py  check-apple-container-docs.py  check-arch-status.sh  check-architecture-status.sh  check-backend-deploy-scope.py  check-container-image-contract.py  check-contract-sync.sh  check-demo-artifacts.py  check-docs-walkthrough.sh  check-ecosystem-contract.py  check-examples-docs.py  check-feature-matrix-contract.py  check-framework-examples.py  check-gate0-foundations.py  check-gate2-outside-readiness.py  check-gate2-public-handoff.py  check-hosting-docs.py  check-live-replay-docs.py  check-local-dev-docs.py  check-mcp-client-docs.py  check-migration-checksums.py  check-migrations-docs.py  check-naming.py  check-offline-self-host-docs.py  check-openapi-drift.sh  check-sdk-parity-contract.py  check-sdk-parity.sh  (+27 more)
(+6279 files in other folders)
