[workspace]
members = [
  "crates/beater-core",
  "crates/beater-schema",
  "crates/beater-store",
  "crates/beater-store-conformance",
  "crates/beater-store-memory",
  "crates/beater-store-obj",
  "crates/beater-store-sql",
  "crates/beater-bus",
  "crates/beater-ingest",
  "crates/beater-otlp",
  "crates/beater-temporal",
  "crates/beater-langfuse",
  "crates/beater-eval",
  "crates/beater-stats",
  "crates/beater-replay",
  "crates/beater-security",
  "crates/beater-auth",
  "crates/beater-accounts",
  "crates/beater-oauth",
  "crates/beater-oauth-server",
  "crates/beater-secrets",
  "crates/beater-composio",
  "crates/beater-judge",
  "crates/beater-sandbox",
  "crates/beater-browser",
  "crates/beater-browser-playwright",
  "crates/beater-browser-webdriver",
  "crates/beater-browser-cdp",
  "crates/beater-browser-capture",
  "crates/beater-browser-harness",
  "crates/beater-search",
  "crates/beater-archive",
  "crates/beater-datasets",
  "crates/beater-experiments",
  "crates/beater-gates",
  "crates/beater-guardrails",
  "crates/beater-prompts",
  "crates/beater-human",
  "crates/beater-calibration",
  "crates/beater-alerts",
  "crates/beater-usage",
  "crates/beater-billing",
  "crates/beater-audit",
  "crates/beater-api",
  "crates/beater-bench",
  "crates/beater-mcp",
  "crates/beater-scenarios",
  "crates/beater-identity",
  "crates/beater-receipts",
  "crates/beater-delegation",
  "crates/beater-autonomy",
  "crates/beater-incidents",
  "crates/beater-knowledge",
  "crates/beater-browser-triage",
  "bins/beaterd",
  "bins/beaterctl",
  "crates/xtask",
]
# Generated SDK clients and hand-written SDKs are standalone packages, not
# workspace members; keep them out of the main cargo build/test graph.
exclude = [
  "sdks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/beater/beater"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
arrow-array = "=58.3.0"
arrow-schema = "=58.3.0"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chacha20poly1305 = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }
# Browser-agent native driver backends (consumed by beater-browser-* crates).
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
fantoccini = "0.21"
futures = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
datafusion = "54"
# Scale trace-store backends (consumed by beater-store-sql). Postgres talks the
# wire protocol directly; ClickHouse is driven over its HTTP interface via
# reqwest so we avoid a heavyweight native driver.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
testcontainers = { version = "0.23", features = ["http_wait"] }
hmac = "0.12"
http = "1"
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "trace"] }
parquet = "=58.3.0"
percent-encoding = "2"
prost = "0.14"
rand_core = { version = "0.6", features = ["std"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tantivy = "0.26"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tower = { version = "0.5", features = ["util"] }
utoipa = { version = "5.5.0", features = ["chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasmtime = { version = "45", default-features = false, features = ["runtime", "cranelift", "std", "component-model"] }
wat = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# Local build-time tuning. The dominant cost of an edit→build→test loop is
# codegen + linking, and full debuginfo is the biggest avoidable slice of it
# (the macOS linker is especially sensitive). `line-tables-only` keeps panic
# and backtrace file:line info (RUST_BACKTRACE still resolves) while dropping
# variable-level debuginfo that a normal loop never reads. Set `debug = true`
# locally when you actually need to step through code in a debugger.
[profile.dev]
debug = "line-tables-only"

# `cargo test` builds use the test profile (which derives from dev); pin the
# same setting so the test loop gets the win too.
[profile.test]
debug = "line-tables-only"
