[workspace]
members = [
  "crates/palette-core",
  "crates/palette-schema",
  "crates/palette-store",
  "crates/palette-store-conformance",
  "crates/palette-store-memory",
  "crates/palette-store-obj",
  "crates/palette-store-sql",
  "crates/palette-bus",
  "crates/palette-ingest",
  "crates/palette-otlp",
  "crates/palette-temporal",
  "crates/palette-langfuse",
  "crates/palette-eval",
  "crates/palette-stats",
  "crates/palette-design",
  "crates/palette-replay",
  "crates/palette-security",
  "crates/palette-auth",
  "crates/palette-accounts",
  "crates/palette-oauth",
  "crates/palette-oauth-server",
  "crates/palette-secrets",
  "crates/palette-composio",
  "crates/palette-judge",
  "crates/palette-sandbox",
  "crates/palette-browser",
  "crates/palette-browser-playwright",
  "crates/palette-browser-webdriver",
  "crates/palette-browser-cdp",
  "crates/palette-browser-capture",
  "crates/palette-browser-harness",
  "crates/palette-search",
  "crates/palette-archive",
  "crates/palette-datasets",
  "crates/palette-experiments",
  "crates/palette-gates",
  "crates/palette-guardrails",
  "crates/palette-prompts",
  "crates/palette-human",
  "crates/palette-calibration",
  "crates/palette-alerts",
  "crates/palette-usage",
  "crates/palette-billing",
  "crates/palette-audit",
  "crates/palette-api",
  "crates/palette-bench",
  "crates/palette-mcp",
  "crates/palette-scenarios",
  "crates/palette-identity",
  "crates/palette-receipts",
  "crates/palette-delegation",
  "crates/palette-autonomy",
  "crates/palette-incidents",
  "crates/palette-knowledge",
  "crates/palette-browser-triage",
  "bins/paletted",
  "bins/palettectl",
  "crates/xtask",
]
# Generated SDK clients and hand-written SDKs are standalone packages, not
# workspace members; keep them out of the main cargo build/test graph.
exclude = [
  "sdks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/jadenfix/palette"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
arrow-array = "=58.3.0"
arrow-schema = "=58.3.0"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
criterion = { version = "0.5", features = ["html_reports"] }
# Browser-agent native driver backends (consumed by palette-browser-* crates).
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
fantoccini = "0.21"
futures = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
datafusion = "54"
# Scale trace-store backends (consumed by palette-store-sql). Postgres talks the
# wire protocol directly; ClickHouse is driven over its HTTP interface via
# reqwest so we avoid a heavyweight native driver.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
testcontainers = { version = "0.23", features = ["http_wait"] }
hmac = "0.12"
http = "1"
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "trace"] }
parquet = "=58.3.0"
percent-encoding = "2"
prost = "0.14"
rand_core = { version = "0.6", features = ["std"] }
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "=0.3.2"
sha2 = "0.10"
subtle = "2"
tantivy = "0.26"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tower = { version = "0.5", features = ["util"] }
utoipa = { version = "5.5.0", features = ["chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasmtime = { version = "45", default-features = false, features = ["runtime", "cranelift", "std", "component-model"] }
wat = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# Local build-time tuning. The dominant cost of an edit→build→test loop is
# codegen + linking, and full debuginfo is the biggest avoidable slice of it
# (the macOS linker is especially sensitive). `line-tables-only` keeps panic
# and backtrace file:line info (RUST_BACKTRACE still resolves) while dropping
# variable-level debuginfo that a normal loop never reads. Set `debug = true`
# locally when you actually need to step through code in a debugger.
[profile.dev]
debug = "line-tables-only"

# `cargo test` builds use the test profile (which derives from dev); pin the
# same setting so the test loop gets the win too.
[profile.test]
debug = "line-tables-only"
