[package]
name = "beaterd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
beater-api = { path = "../../crates/beater-api" }
beater-archive = { path = "../../crates/beater-archive" }
beater-audit = { path = "../../crates/beater-audit" }
beater-auth = { path = "../../crates/beater-auth" }
beater-bus = { path = "../../crates/beater-bus" }
beater-calibration = { path = "../../crates/beater-calibration" }
beater-datasets = { path = "../../crates/beater-datasets" }
beater-experiments = { path = "../../crates/beater-experiments" }
beater-gates = { path = "../../crates/beater-gates" }
beater-human = { path = "../../crates/beater-human" }
beater-ingest = { path = "../../crates/beater-ingest" }
beater-judge = { path = "../../crates/beater-judge" }
beater-otlp = { path = "../../crates/beater-otlp" }
beater-search = { path = "../../crates/beater-search" }
beater-secrets = { path = "../../crates/beater-secrets" }
beater-schema = { path = "../../crates/beater-schema" }
beater-store = { path = "../../crates/beater-store" }
beater-store-obj = { path = "../../crates/beater-store-obj" }
beater-store-sql = { path = "../../crates/beater-store-sql" }
beater-core = { path = "../../crates/beater-core" }
beater-usage = { path = "../../crates/beater-usage" }
clap.workspace = true
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
beater-replay = { path = "../../crates/beater-replay" }
opentelemetry-proto.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
