[package]
name = "beaterd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
beater-accounts = { path = "../../crates/beater-accounts" }
beater-api = { path = "../../crates/beater-api" }
beater-archive = { path = "../../crates/beater-archive" }
beater-audit = { path = "../../crates/beater-audit" }
beater-auth = { path = "../../crates/beater-auth" }
beater-oauth = { path = "../../crates/beater-oauth" }
beater-oauth-server = { path = "../../crates/beater-oauth-server" }
beater-bus = { path = "../../crates/beater-bus" }
beater-calibration = { path = "../../crates/beater-calibration" }
beater-datasets = { path = "../../crates/beater-datasets" }
beater-experiments = { path = "../../crates/beater-experiments" }
beater-gates = { path = "../../crates/beater-gates" }
beater-human = { path = "../../crates/beater-human" }
beater-ingest = { path = "../../crates/beater-ingest" }
beater-judge = { path = "../../crates/beater-judge" }
beater-mcp = { path = "../../crates/beater-mcp" }
beater-otlp = { path = "../../crates/beater-otlp" }
beater-search = { path = "../../crates/beater-search" }
beater-secrets = { path = "../../crates/beater-secrets" }
beater-schema = { path = "../../crates/beater-schema" }
beater-temporal = { path = "../../crates/beater-temporal" }
beater-store = { path = "../../crates/beater-store" }
beater-store-obj = { path = "../../crates/beater-store-obj" }
beater-store-sql = { path = "../../crates/beater-store-sql" }
beater-core = { path = "../../crates/beater-core" }
beater-usage = { path = "../../crates/beater-usage" }
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true

[features]
# R1.2: the future service split is logical, not operational. The all-in-one
# `beaterd` is the only mandatory deployment. Optional thin role binaries are
# gated behind this feature and are NOT built by default, so a self-host never
# has to run a multi-service topology.
default = []
thin-bins = []

# Optional thin role binaries (R1.2). They share the same crate but are only
# compiled when the `thin-bins` feature is enabled, proving the split is opt-in.
[[bin]]
name = "beater-ingestd"
path = "src/bin/beater-ingestd.rs"
required-features = ["thin-bins"]

[[bin]]
name = "beater-queryd"
path = "src/bin/beater-queryd.rs"
required-features = ["thin-bins"]

[dev-dependencies]
beater-replay = { path = "../../crates/beater-replay" }
opentelemetry-proto.workspace = true
tempfile.workspace = true
tower.workspace = true

[lints]
workspace = true
