[package]
name = "palettectl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
palette-alerts = { path = "../../crates/palette-alerts" }
palette-api = { path = "../../crates/palette-api" }
palette-audit = { path = "../../crates/palette-audit" }
palette-auth = { path = "../../crates/palette-auth" }
palette-bus = { path = "../../crates/palette-bus" }
palette-calibration = { path = "../../crates/palette-calibration" }
palette-core = { path = "../../crates/palette-core" }
palette-datasets = { path = "../../crates/palette-datasets" }
palette-eval = { path = "../../crates/palette-eval" }
palette-experiments = { path = "../../crates/palette-experiments" }
palette-gates = { path = "../../crates/palette-gates" }
palette-human = { path = "../../crates/palette-human" }
palette-ingest = { path = "../../crates/palette-ingest" }
palette-judge = { path = "../../crates/palette-judge" }
palette-otlp = { path = "../../crates/palette-otlp" }
palette-replay = { path = "../../crates/palette-replay" }
palette-schema = { path = "../../crates/palette-schema" }
palette-security = { path = "../../crates/palette-security" }
palette-secrets = { path = "../../crates/palette-secrets" }
palette-store = { path = "../../crates/palette-store" }
palette-store-obj = { path = "../../crates/palette-store-obj" }
palette-store-sql = { path = "../../crates/palette-store-sql" }
palette-usage = { path = "../../crates/palette-usage" }
chrono.workspace = true
clap.workspace = true
opentelemetry-proto.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
tempfile.workspace = true
axum.workspace = true

[lints]
workspace = true
