[package]
name = "beater-alerts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
utoipa = { workspace = true }
anyhow.workspace = true
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
beater-security = { path = "../beater-security" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
