[package]
name = "beater-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
beater-alerts = { path = "../beater-alerts" }
beater-archive = { path = "../beater-archive" }
beater-audit = { path = "../beater-audit" }
beater-auth = { path = "../beater-auth" }
beater-billing = { path = "../beater-billing", optional = true }
beater-calibration = { path = "../beater-calibration" }
beater-composio = { path = "../beater-composio" }
beater-core = { path = "../beater-core" }
beater-datasets = { path = "../beater-datasets" }
beater-eval = { path = "../beater-eval" }
beater-experiments = { path = "../beater-experiments" }
beater-gates = { path = "../beater-gates" }
beater-human = { path = "../beater-human" }
beater-ingest = { path = "../beater-ingest" }
beater-judge = { path = "../beater-judge" }
beater-oauth = { path = "../beater-oauth" }
beater-otlp = { path = "../beater-otlp" }
beater-prompts = { path = "../beater-prompts" }
beater-scenarios = { path = "../beater-scenarios" }
beater-schema = { path = "../beater-schema" }
beater-search = { path = "../beater-search" }
beater-security = { path = "../beater-security" }
beater-secrets = { path = "../beater-secrets" }
beater-store = { path = "../beater-store" }
beater-store-memory = { path = "../beater-store-memory" }
beater-usage = { path = "../beater-usage" }
chrono.workspace = true
http.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
uuid.workspace = true

[features]
# Hosted-only: billing/Stripe is a hosted concern kept out of the OSS default
# build. Enabling this compiles the billing handlers and merges the Stripe
# endpoints into the API contract. The open-source build must not enable it.
billing = ["dep:beater-billing"]

[dev-dependencies]
async-trait.workspace = true
beater-bus = { path = "../beater-bus" }
beater-eval = { path = "../beater-eval" }
beater-replay = { path = "../beater-replay" }
beater-sandbox = { path = "../beater-sandbox" }
beater-store-obj = { path = "../beater-store-obj" }
beater-store-sql = { path = "../beater-store-sql" }
opentelemetry-proto.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
wat.workspace = true

[lints]
workspace = true
