[package]
name = "beater-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
utoipa = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
beater-core = { path = "../beater-core" }
beater-security = { path = "../beater-security" }
beater-store = { path = "../beater-store" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
