[package]
name = "beater-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
chrono.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "smoke"
harness = false

[lints]
workspace = true
