[package]
name = "beater-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
chrono.workspace = true
serde_json.workspace = true

[dev-dependencies]
beater-store = { path = "../beater-store" }
beater-store-memory = { path = "../beater-store-memory" }
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "smoke"
harness = false

[[bench]]
name = "store_memory"
harness = false

[lints]
workspace = true
