[package]
name = "beater-browser-cdp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
beater-browser = { path = "../beater-browser" }
chromiumoxide.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
