[package]
name = "beater-bus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
utoipa = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
beater-core = { path = "../beater-core" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
