[package]
name = "beater-calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
utoipa = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
beater-core = { path = "../beater-core" }
beater-datasets = { path = "../beater-datasets" }
beater-stats = { path = "../beater-stats" }
beater-schema = { path = "../beater-schema" }
beater-store = { path = "../beater-store" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
