[package]
name = "beater-composio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa = { workspace = true }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
