[package]
name = "beater-delegation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
utoipa = { workspace = true }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
