[package]
name = "beater-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
