[package]
name = "beater-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
utoipa = { workspace = true }
beater-core = { path = "../beater-core" }
beater-design = { path = "../beater-design" }
beater-schema = { path = "../beater-schema" }
beater-stats = { path = "../beater-stats" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
