[package]
name = "beater-experiments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
utoipa = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
beater-core = { path = "../beater-core" }
beater-datasets = { path = "../beater-datasets" }
beater-eval = { path = "../beater-eval" }
beater-judge = { path = "../beater-judge" }
beater-schema = { path = "../beater-schema" }
beater-stats = { path = "../beater-stats" }
beater-store = { path = "../beater-store" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
axum.workspace = true

[lints]
workspace = true
