[package]
name = "beater-human"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
beater-core = { path = "../beater-core" }
beater-datasets = { path = "../beater-datasets" }
beater-schema = { path = "../beater-schema" }
beater-store = { path = "../beater-store" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
